[package]
name = "rthreads"
version = "0.1.0"
edition = "2021"

[lib]
name = "librthreads"
path = "src/lib.rs"

[[bin]]
name = "rthread-test"
path = "src/bin/rthread-test.rs"


[profile.release]
strip = true
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
